Update for CameraX to 1.2.2

--- a/PyTorchDemoApp/app/src/main/res/layout/activity_image_classification.xml
+++ b/PyTorchDemoApp/app/src/main/res/layout/activity_image_classification.xml
@@ -15,8 +15,8 @@
         android:layout_marginBottom="8dp"
         android:elevation="1dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@id/image_classification_texture_view"
-        app:layout_constraintRight_toRightOf="@id/image_classification_texture_view" />
+        app:layout_constraintBottom_toBottomOf="@id/previewView"
+        app:layout_constraintRight_toRightOf="@id/previewView" />
 
     <TextView
         android:id="@+id/image_classification_fps_text"
@@ -27,7 +27,7 @@
         android:layout_marginBottom="8dp"
         android:elevation="1dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@id/image_classification_texture_view"
+        app:layout_constraintBottom_toBottomOf="@id/previewView"
         app:layout_constraintRight_toLeftOf="@id/image_classification_ms_text" />
 
     <TextView
@@ -39,14 +39,13 @@
         android:layout_marginBottom="8dp"
         android:elevation="1dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@id/image_classification_texture_view"
+        app:layout_constraintBottom_toBottomOf="@id/previewView"
         app:layout_constraintRight_toLeftOf="@id/image_classification_fps_text" />
 
-    <ViewStub
-        android:id="@+id/image_classification_texture_view_stub"
+    <androidx.camera.view.PreviewView
+        android:id="@+id/previewView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout="@layout/texture_view"
         app:layout_constraintBottom_toTopOf="@id/image_classification_result_header_row"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -120,3 +119,4 @@
         app:textAppearance="@style/TextAppearanceImageClassificationResultTop1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
