--- a/ASLRecognition/app/src/main/res/layout/activity_live_asl_recognition.xml
+++ b/ASLRecognition/app/src/main/res/layout/activity_live_asl_recognition.xml
@@ -6,12 +6,11 @@
     android:background="@android:color/black"
     android:fitsSystemWindows="true">
 
-    <ViewStub
-        android:id="@+id/asl_recognition_texture_view_stub"
+    <androidx.camera.view.PreviewView
+        android:id="@+id/preview_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout="@layout/texture_view"
-        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
