--- a/ObjectDetection/app/src/main/res/layout/activity_object_detection.xml
+++ b/ObjectDetection/app/src/main/res/layout/activity_object_detection.xml
@@ -11,19 +11,32 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout="@layout/texture_view"
-        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/resultView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <org.pytorch.demo.objectdetection.ResultView
         android:id="@+id/resultView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/object_detection_texture_view_stub"
+        app:layout_constraintBottom_toTopOf="@id/textResultView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <TextView
+        android:id="@+id/textResultView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:background="#FF2356E7"
+        android:textColor="#FFFFFFFF"
+        android:lines="2"
+        android:minLines="2"
+        android:singleLine="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
